@@ -19,5 +19,25 @@ namespace SDA
         int level;
         int vitality;
         
+        //Handling player texture in Game1.cs for now
+        //Texture2D texture;
+        
+
+        public Player()
+        {
+            
+            health = 100;
+            dexterity = 1;
+            strength = 1;
+            exp = 0;
+            expToLevel = 100;
+            level = 1;
+           
+        }
+
+        public void Move()
+        {
+
+        }
     }
 }
